--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,7 +1,10 @@
 .App {
   text-align: center;
 }
-
+.fontInter {
+  font-family: "Inter", sans-serif, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif !important;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -105,7 +108,25 @@
     background-repeat: no-repeat !important;
     background-size: contain !important;
     background-position: top;
-    margin-top: -2rem !important;
+    margin-bottom: 2rem !important;
+  }
+}
+
+.backgroundSection6 {
+  background-image: url(../image/background/BakgroundBawah.png);
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+  background-position: 0rem -20rem !important;
+  margin-top: 4rem !important;
+}
+
+@media all and (max-width: 430px) {
+  .backgroundSection6 {
+    background-image: url(../image/background/BakgroundBawah.png);
+    background-repeat: no-repeat !important;
+    background-size: contain !important;
+    background-position: 0rem 3rem !important;
+    margin-top: 2rem !important;
   }
 }
 
