--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -88,8 +88,9 @@
   .backgroundSection4 {
     background-image: url(../image/background/BackgroundSection4.png);
     background-repeat: no-repeat !important;
-    background-size: contain !important;
-    background-position: top;
+    background-size: cover !important;
+    background-position: -12rem 0rem !important;
+
     margin-top: 0rem !important;
   }
 }
@@ -98,7 +99,6 @@
   background-image: url(../image/background/BackgroundSection5.png);
   background-repeat: no-repeat !important;
   background-size: contain !important;
-  background-position: left !important;
   margin-top: -4rem !important;
 }
 
@@ -106,8 +106,8 @@
   .backgroundSection5 {
     background-image: url(../image/background/BackgroundSection5.png);
     background-repeat: no-repeat !important;
-    background-size: contain !important;
-    background-position: top;
+    background-size: cover !important;
+    background-position: -3rem 0rem !important;
     margin-bottom: 2rem !important;
   }
 }
