--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 span,
-button {
+a {
   margin: 0;
   font-family: "Inter", sans-serif, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
     "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif !important;
